--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,11 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
+
+    App\Controller\RegistrationController:
+        arguments:
+            $passwordEncoder: '@security.password_encoder'
+
     App\:
         resource: '../src/'
         exclude:
