--- a/config/routes/framework.yaml
+++ b/config/routes/framework.yaml
@@ -2,3 +2,6 @@ when@dev:
     _errors:
         resource: '@FrameworkBundle/Resources/config/routing/errors.xml'
         prefix: /_error
+app_registration:
+    path: /registration
+    controller: App\Controller\RegistrationController::register
